<resources>
    <string name="app_name">Task1</string>

    <string name="sign_up">تسجيل حساب</string>
    <string name="sign_in">تسجيل دخول</string>
    <string name="sign_up_button">تسجيل</string>
    <string name="sign_in_button">دخول</string>



    <string name="username_hint">إسم المُستخدم</string>
    <string name="e_mail_hint">البريد الإلكتروني</string>
    <string name="password_hint">كلمة السر</string>
    <string name="confirm_password_hint">تأكيد كلمة السر</string>



</resources>
