<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/sign_in_background"
    android:orientation="vertical"
    android:padding="16sp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:src="@drawable/sign_in_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/sign_in"
        android:textColor="@color/sign_up_color_white"
        android:textSize="35sp"
        android:textStyle="bold" />





    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_in_username_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        android:layout_marginTop="128sp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_in_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_button"
        android:textColor="@color/sign_up_color_white"
        android:textStyle="bold"
        android:layout_marginHorizontal="56dp"
        android:layout_marginTop="40sp"
        android:background="@drawable/sign_up_button"
        android:textSize="25dp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_gravity="center"
        android:layout_marginTop="40sp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/sign_up_color_blue"
        android:id="@+id/sign_up"
        />

</LinearLayout>